name: geb
version: 0
author: Arianna Masciolini, Claudio Pannacci
maintainer: uzkamascio@gmail.com, pannacciclaudio@gmail.com
category: Misc
build-type: Simple
extra-source-files: README.md
cabal-version: >= 1.10

library
    exposed-modules: 
        MIU,
        PG,
        NumberSequence,
        Bach,
        GoodKingWenceslas
    other-modules: 
        Parsing,
        Eutermea
    default-language: Haskell2010
    build-depends:
        base,
        Euterpea,
        QuickCheck,
        deepseq

executable Pagine
    main-is: Pagine.hs
    other-modules:
        Parsing,
        Eutermea,
        MIU,
        NumberSequence,
        PG,
        Bach,
        GoodKingWenceslas,
        Jabberwocky
    build-depends:
        base,
        Euterpea,
        QuickCheck,
        deepseq
    ghc-options: -main-is Pagine -XOverloadedStrings
    default-language: Haskell2010
